# rpcchat

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  CommonConnectionPool.cpp  CommonConnectionPool.h  Connection.cpp  chatserver.h  chatservice.pb.h  group.pb.cc  group.pb.h  localmessage.pb.cc  localmessage.proto  mysqlmodel.cpp  mysqlmodel.h  public.pb.cc  public.pb.h  public.proto  redis.cpp  user.pb.h  user.proto  usersqlite.cpp
example/callee/: CMakeLists.txt  chatservice.cpp  friendservice.cc  groupservice.cc  mysql.ini  userservice.cc
example/caller/: CMakeLists.txt  main.cpp  main2.cpp  rpcclient.cpp  rpcclient.hpp  userinfo.cpp  userinfo.h
example/tool/: CMakeLists.txt  CommonConnectionPool.cpp  chatserver.cc  chatservice.pb.cc  friend.pb.cc  mysqlmodel.cpp  user.pb.cc
example/tool/include/: CommonConnectionPool.h  Connection.h  friend.pb.h  localmessage.pb.h  mysqlmodel.h  redis.hpp  rpcclient.hpp  userinfo.h  usersqlite.h
example/tool/protobuf/: chatservice.proto  friend.proto  group.proto
src/: mprpcchannel.cc  rpcprovider.cc  zookeeperutil.cc
src/include/: mprpccontroller.h  rpcprovider.h  zookeeperutil.h
